<resources>
    <string name="app_name">Ozochat</string>
    <string name="select_contact">Select Contact</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="welcome">Welcome to Ozochat</string>
    <string name="agree">"Agree and Continue "</string>
    <string name="verifyYourNumber">Verify your phone number</string>
    <string name="ozochatSend">Ozochat will send an SMS message to verify your phone number. enter your Country code and phone number.</string>
    <string name="waitingSend">Waiting to automatically detect an SMS sent to 9999999999. wroung Number  </string>
    <string name="policy">Read Privacy Policy Tap Agree and Continue to accept the Terms of service.</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="start_a_chat">Start a Chat</string>
    <string name="new_contact">New Contact</string>
    <string name="new_group">New Group</string>
    <string name="type_a_message">Type a message</string>
    <string name="profileinfo">Profile Info</string>
    <string name="file_limit_size_upload_format">Files must be less than %sMB</string>
    <string name="recent_updates">Recent updates</string>
    <string name="ServerError">Server not responding, please try later</string>
    <string name="NoInternet">Please check your internet connection.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="internal_storage">InternalStore</string>
    <string name="select">select group members</string>
    <string name="type_group_name">Type group subject here...</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="group_admin">Group Admin</string>
    <string name="viewed_updates">Viewed updates</string>
    <string name="enter_caption_here">Add a caption...</string>
</resources>