<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".view.activity.WelcomeScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:gravity="center"
        android:fontFamily="@font/urfa_medium"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_white"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/urfa_regular"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/agree"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/urfa_medium"
            android:textColor="@android:color/white"
            android:background="@drawable/agree_button"/>


    </LinearLayout>





</LinearLayout>