<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="commonResponse"
            type="com.ozonetech.ozochat.viewmodel.Contacts" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_select_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".view.activity.SelectContactActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_edit_group">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/thumbnail"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile_icon"
                        app:civ_border_color="#7e3c62"
                        app:civ_border_width="0dp"
                        />

                    <ImageView
                        android:id="@+id/iv_add"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="20dp"
                        android:layout_gravity="right|bottom"
                        android:layout_marginRight="@dimen/dp10"
                        android:layout_marginBottom="@dimen/dp10"
                        android:src="@drawable/ic_add"
                        android:visibility="visible" />

                </FrameLayout>

                <EditText
                    android:id="@+id/etGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_margin="@dimen/dp10"
                    android:fontFamily="@font/urfa_medium"
                    android:hint="@string/type_group_name"
                    android:textColorHint="@color/colorHint"
                    android:layout_gravity="center"
                    android:gravity="start|center"
                    android:padding="@dimen/dp10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp12" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_new_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_margin="@dimen/dp10"
                    android:scaleType="centerCrop"
                    android:src="@drawable/new_group_icon"
                    app:civ_border_color="#7e3c62"
                    app:civ_border_width="0dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp2"
                    android:fontFamily="@font/urfa_medium"
                    android:text="@string/new_group"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp12" />


            </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_new_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/dp50"
                        android:layout_height="@dimen/dp50"
                        android:layout_margin="@dimen/dp10"
                        android:scaleType="centerCrop"
                        android:src="@drawable/new_contact_icon"
                        app:civ_border_color="#7e3c62"
                        app:civ_border_width="0dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp2"
                        android:fontFamily="@font/urfa_medium"
                        android:text="@string/new_contact"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp12" />

                    <ImageView
                        android:layout_width="@dimen/dp30"
                        android:layout_height="@dimen/dp30"
                        android:layout_marginRight="@dimen/dp30"
                        android:layout_gravity="center"
                        android:src="@drawable/qr_code_icon" />

                </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_contacts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:listitem="@layout/contactlist_row_layout" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
